StScrollView and StButton should support add_child()
Affected version
OS: 5.6.4-arch1-1
GNOME Shell: 3.36.1
Bug summary
I'm working on an extension for GNOME and noticed that StScrollView and StButton (and, possibly, other classes as well) does not support Clutter's add_child() method. They seem to still rely on deprecated add_actor().
Steps to reproduce
Create a StScrollView or StButton and try adding children with add_child().
What happened
Using add_child() throws no errors and added children are returned with parent.get_children(). However, none of them are visible. Setting child.visible to true has no effect.
What did you expect to happen
add_child() should produce the same output as add_actor(), i.e. added children should be visible.
Edited by Juozas Miškinis